--- a/docker/nginx/docker-compose.yml
+++ b/docker/nginx/docker-compose.yml
@@ -12,5 +12,6 @@ services:
       volumes:
        - ./conf/nginx.conf:/etc/nginx/nginx.conf
        - ./logs:/var/log/nginx
-       - ./html:/usr/share/nginx/html 
+       - ./html:/usr/share/nginx/html
+       - ./img:/oss   
       network_mode: "bridge"
